# mud-16

./: BOM.csv  CMakeLists.txt  Makefile  README.md  frame.ppm  grant_proposal.md  main.cpp  ppu.sv
cad/: Case.f3z
firmware/: main.cpp  vram_init_data.cpp
include/: vram_init_data.h
pcb/: display.kicad_sch  fp-info-cache  inputs.kicad_sch  logicshifters.kicad_sch  mud-16.kicad_pcb  mud-16.kicad_prl  mud-16.kicad_pro  mud-16.kicad_sch  power.kicad_sch
